💄 Fix style section title spacing

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -228,7 +228,6 @@ button {
     width: 270px;
     height: 75px;
     padding-top: 46px;
-    padding-top: 62px;
     font-size: 1.7em;
   }
 
